[package]
name = "bluzelle"
version = "0.1.0"
authors = ["vb <vbstreetz@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
json = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
failure = "*"
secp256k1 = "*"
hex = "*"
base64 = "*"
tiny-bip39 = "*"
hdwallet = "*"
bech32 = "*"
log = "*"
dotenv = "*"
pretty_env_logger = "*"
tokio = { version = "0.2", features = ["full"] }
rand = "*"
async-recursion = "*"
bitcoin_hashes = "*"